# deguerre-trillek-client-core

./: CMakeLists.txt
cmake/: Boost.cmake  ConfigureChecks.cmake  GL.cmake  Platform.cmake  SFML.cmake
src/: CMakeLists.txt
src/app-m1/: CMakeLists.txt  main.cc  player.hh  sfml_device.cc  subsystem_manager.cc  system_event_queue.cc
src/graphics/: CMakeLists.txt  draw_immediate.cc  draw_immediate.hh  graphics_adapter.hh  graphics_constants.hh  graphics_device.cc  graphics_device.hh  graphics_state.cc  graphics_state.hh  graphics_subsystem.cc  graphics_subsystem.hh  primitive.cc  primitive.hh  render_target.cc  render_target.hh  texture.hh
src/graphics/gl/: CMakeLists.txt  graphics_device_gl.cc  graphics_device_gl.hh  graphics_gl.hh  mesh_gl.cc  mesh_gl.hh  render_subsystem_gl.cc  texture_gl.hh  texture_target_gl.cc  texture_target_gl.hh  translate_constants_gl.hh  vertex_buffer_gl.cc  vertex_buffer_gl.hh  vertex_format_gl.hh
src/include/: color.hh  graphics_driver.hh  input_driver.hh  subsystem.hh  system_event.hh  trillek_client_config.h.cmake  trillek_gl.hh  utils.hh
src/maths/: CMakeLists.txt  bounds.hh  complex.hh  dual.hh  frustum.hh  maths.hh  quaternion.hh  rect.hh  transform.cc  transform.hh  vector2.hh  vector3.hh
src/platform/: CMakeLists.txt  keycodes.hh  platform_subsystem.cc  platform_subsystem.hh  subsystem.hh  subsystem_manager.cc  system_event.hh  system_event_queue.cc  window.cc  window.hh  window_manager.cc  window_manager.hh
src/platform/sfml/: CMakeLists.txt  platform_sfml.cc  platform_sfml.hh  rest  window_manager_sfml.cc  window_manager_sfml.hh  window_sfml.cc  window_sfml.hh  window_target_sfml.cc  window_target_sfml.hh
